--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-	"homepage": "https://ludviggrenmo.github.io/zittron-website/",
 	"name": "zittron-website",
 	"version": "0.1.0",
 	"private": true,
@@ -29,9 +28,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"surge": "npm run build && cd build && surge",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"surge": "npm run build && cd build && surge"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
