--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"react-wavify": "^1.5.2",
+		"smoothscroll-polyfill": "^0.4.4",
 		"styled-components": "^5.3.0"
 	},
 	"scripts": {
