--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
+		"axios": "^0.21.1",
 		"emailjs-com": "^3.0.2",
 		"framer-motion": "^4.1.17",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-hero-video": "^0.1.1",
 		"react-icons": "^4.2.0",
+		"react-intersection-observer": "^8.32.1",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
