--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react": "^16.13.1",
 		"react-cookie": "^4.1.1",
 		"react-dom": "^16.13.1",
+		"react-ga": "^3.3.0",
 		"react-hero-video": "^0.1.1",
 		"react-icons": "^4.2.0",
 		"react-intersection-observer": "^8.32.1",
