--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"surge": "npm run build && cd build && surge"
+		"postbuild": "react-snap"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -52,6 +52,7 @@
 		]
 	},
 	"devDependencies": {
-		"gh-pages": "^3.2.1"
+		"gh-pages": "^3.2.1",
+		"react-snap": "^1.23.0"
 	}
 }
