--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"postbuild": "react-snap"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -52,7 +51,6 @@
 		]
 	},
 	"devDependencies": {
-		"gh-pages": "^3.2.1",
-		"react-snap": "^1.23.0"
+		"gh-pages": "^3.2.1"
 	}
 }
