--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ REACT_APP_SANITY_STUDIO_API_DATASET=production
 REACT_APP_USER_ID=user_wxOBkkzgwByLqSwq3gKCV
 REACT_APP_TEMPLATE_ID=template_o0onus4
 REACT_APP_SERVICE_ID=service_seqausp
+REACT_APP_gaUA=
+UA-206812801-1
